--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
     <head>
         <title>Google Search</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href = "google_image_search.html" class="upper_right">Google Images</a>
-        <a href = "google_advanced_search.html" class = "upper_right">Advanced Google Search</a>
-        <img src = "Google logo.jpg" class = "center">
-        <form action = "https://google.com/search" class = "center">
-            <input id = "textbox" class="rounded_corners" type = "text" name = "q">
-            <input id = "search" class = "rounded_corners" type = "submit">
+        <a href="google_image_search.html" class="upper_right">Google Images</a>
+        <a href="google_advanced_search.html" class="upper_right">Advanced Google Search</a>
+        <img src="Google logo.jpg" class="center">
+        <form action="https://google.com/search" class="center">
+            <input id="textbox" class="rounded_corners" type="text" name="q">
+            <input id="search" class="rounded_corners" type="submit">
         </form>
-        <a href = "https://chrome.google.com/webstore/detail/im-feeling-lucky/cnlabakikmdekpfaflaihcepfkjopgll" class="center">I'm Feeling Lucky</a>
+        <a href="https://chrome.google.com/webstore/detail/im-feeling-lucky/cnlabakikmdekpfaflaihcepfkjopgll" class="center">I'm Feeling Lucky</a>
+        <script>
+            document.getElementById("textbox").addEventListener("input", function() {
+                console.log("User is typing:", this.value);
+            });
+        </script>
     </body>
 </html>
